--- a/static/recipes.html
+++ b/static/recipes.html
@@ -117,14 +117,14 @@
 
 			<div class="collapse navbar-collapse">
 				<ul class="nav navbar-nav">
-					<li class="active"> <a href="index.html" > <span class="glyphicon glyphicon-home"></span>  Home </a></li>
-					<li> <a href="recipes.html"><span class="glyphicon glyphicon-list"> </span>  Recipes </a></li>
+					<li > <a href="index.html" > <span class="glyphicon glyphicon-home"></span>  Home </a></li>
+					<li class="active"> <a href="recipes.html"><span class="glyphicon glyphicon-list"> </span>  Recipes </a></li>
 					<li> <a href="qa.html" > <span class="glyphicon glyphicon-comment"></span> Q&A </a></li>
-					<li> <a href="profile.html" ><span class="glyphicon glyphicon-search"></span> Search </a></li>
+					<li> <a href="" ><span class="glyphicon glyphicon-search"></span> Search </a></li>
 				</ul>
 
 				<ul class="nav navbar-nav navbar-right">
-					<li> <a href="" > Profile </a></li>
+					<li> <a href="profile.html" > Profile </a></li>
 				</ul>
 			</div>
 
@@ -153,7 +153,7 @@
 		<div class="panel panel-default ">
 
  			<div class="panel-body">
- 				<h3 >The Best Vegan Restaurants of 2014 in San Diego<br/><br/></h3>
+ 				<h3 >Recipes<br/><br/></h3>
 
  				<div class="row">
 
@@ -182,33 +182,7 @@
   			</div>
 		</div>
 
-		<!-- DUPLICATE PANEL -->
-		<div class="panel panel-default ">
- 			<div class="panel-body">
- 					    <h3 >Oh No Not The Same Post Again<br/><br/></h3>
 
- 				<div class="row">
-
-			<!-- PICTURE 2 -->
-	  		<div class="col-xs-6 col-md-3">
-	    	<a href="#" class="thumbnail">
-	    	<img src="http://cdn.morguefile.com/imageData/public/files/k/kconnors/preview/fldr_2012_08_02/file4741343923334.jpg">
-	    	</a>
-	  		</div>
-
-			<!-- PICTURE 1 -->
-	  		<div class="col-xs-6 col-md-3">
-	   		 <a href="#" class="thumbnail">
-	      	<img src="http://cdn.morguefile.com/imageData/public/files/d/dierregi/08/h/1408276981k6sod.jpg">
-	    	</a>
-	  		</div>
-
-			</div>
-
-    		Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ego vero isti, inquam, permitto. Iam id ipsum absurdum, maximum malum neglegi. Duo Reges: constructio interrete. Ergo hoc quidem apparet, nos ad agendum esse natos. Illa sunt similia: hebes acies est cuipiam oculorum, corpore alius senescit; Ad corpus diceres pertinere-, sed ea, quae dixi, ad corpusne refers?
-
-  			</div>
-		</div>
 
 
 	</div>
