--- a/static/index.html
+++ b/static/index.html
@@ -10,7 +10,7 @@
 <link href='http://fonts.googleapis.com/css?family=Source+Sans+Pro|Lato|Open+Sans:400,600' rel='stylesheet' type='text/css'>
     <!-- Bootstrap -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/css/bootstrap.min.css">
-
+<link href='http://fonts.googleapis.com/css?family=Lato:300,400,700,300italic,400italic,700italic|Ubuntu:300,400,500,700,300italic,400italic,500italic|Open+Sans:400italic,600italic,700italic,700,600,400|Roboto:400,300italic,300,400italic,500,500italic,700,700italic|Raleway:400,300,500,600,700|Pacifico' rel='stylesheet' type='text/css'>
     
     <style>
 
@@ -35,6 +35,12 @@
 	.nav {
 		text-shadow: 1px 2px 2px #17A57D;
 
+	}
+	
+	.navbar-brand {
+		font-family: "Pacifico", serif;
+		font-size: 22pt;
+		text-shadow: 2px 2px 3px #17A57D;
 	}
 
 
@@ -124,7 +130,7 @@
 				</ul>
 
 				<ul class="nav navbar-nav navbar-right">
-					<li> <a href="" > Profile </a></li>
+					<li> <a href="" ><span class="glyphicon glyphicon-user"></span> Profile </a></li>
 				</ul>
 			</div>
 
@@ -160,14 +166,14 @@
 			<!-- PICTURE 1 -->
 	  		<div class="col-xs-6 col-md-3">
 	   		 <a href="#" class="thumbnail">
-	      	<img src="http://cdn.morguefile.com/imageData/public/files/d/dierregi/08/h/1408276981k6sod.jpg">
+	      	<img src="https://c1.staticflickr.com/3/2759/4218998081_ef0de9fbc9_z.jpg?zz=1">
 	    	</a>
 	  		</div>
 
 			<!-- PICTURE 2 -->
 	  		<div class="col-xs-6 col-md-3">
 	    	<a href="#" class="thumbnail">
-	    	<img src="http://cdn.morguefile.com/imageData/public/files/k/kconnors/preview/fldr_2012_08_02/file4741343923334.jpg">
+	    	<img src="https://c2.staticflickr.com/8/7163/6750034613_2806e59dff_b.jpg">
 	    	</a>
 
 	  		</div>
@@ -192,14 +198,14 @@
 			<!-- PICTURE 2 -->
 	  		<div class="col-xs-6 col-md-3">
 	    	<a href="#" class="thumbnail">
-	    	<img src="http://cdn.morguefile.com/imageData/public/files/k/kconnors/preview/fldr_2012_08_02/file4741343923334.jpg">
+	    	<img src="https://c2.staticflickr.com/8/7163/6750034613_2806e59dff_b.jpg">
 	    	</a>
 	  		</div>
 
 			<!-- PICTURE 1 -->
 	  		<div class="col-xs-6 col-md-3">
 	   		 <a href="#" class="thumbnail">
-	      	<img src="http://cdn.morguefile.com/imageData/public/files/d/dierregi/08/h/1408276981k6sod.jpg">
+	      	<img src="https://c1.staticflickr.com/3/2759/4218998081_ef0de9fbc9_z.jpg?zz=1">
 	    	</a>
 	  		</div>
 
