--- a/static/profile.html
+++ b/static/profile.html
@@ -10,6 +10,7 @@
 <link href='http://fonts.googleapis.com/css?family=Source+Sans+Pro|Lato|Open+Sans:400,600' rel='stylesheet' type='text/css'>
     <!-- Bootstrap -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/css/bootstrap.min.css">
+<link href='http://fonts.googleapis.com/css?family=Lato:300,400,700,300italic,400italic,700italic|Ubuntu:300,400,500,700,300italic,400italic,500italic|Open+Sans:400italic,600italic,700italic,700,600,400|Roboto:400,300italic,300,400italic,500,500italic,700,700italic|Raleway:400,300,500,600,700|Pacifico' rel='stylesheet' type='text/css'>
 
     
     <style>
@@ -35,6 +36,12 @@
 	.nav {
 		text-shadow: 1px 2px 2px #17A57D;
 
+	}
+	
+	.navbar-brand {
+		font-family: "Pacifico", serif;
+		font-size: 22pt;
+		text-shadow: 2px 2px 3px #17A57D;
 	}
 
 
@@ -124,7 +131,7 @@
 				</ul>
 
 				<ul class="nav navbar-nav navbar-right">
-					<li class="active"> <a href="profile.html" > Profile </a></li>
+					<li class="active"> <a href="profile.html" ><span class="glyphicon glyphicon-user"></span> Profile </a></li>
 				</ul>
 			</div>
 
