added things to home/qa/recipes/profile, selectors, etc
testing search design on home page only.

--- a/static/qa.html
+++ b/static/qa.html
@@ -39,6 +39,10 @@
 		text-shadow: 2px 2px 3px #17A57D;
 	}
 
+	/* Custom style for the selector buttons */
+	.selectButton {
+		font-size:1em;
+	}
 
 .navbar-default {
 	background-color: #87b822;
@@ -150,28 +154,60 @@
 		</div>
  -->
 
+ 		<!-- NO EASY WAY TO CHANGE THEIR COLORS BUT GOOGLE IT IN FREE TIME -->
+ 		<div class="btn-group btn-group-justified" role="group" aria-label="...">
+  			<div class="btn-group" role="group">
+    			<button type="button" class="btn btn-default btn-success selectButton">Popular</button>
+  			</div>
+  			<div class="btn-group" role="group">
+    			<button type="button" class="btn btn-default selectButton">New</button>
+  			</div>
+  			<div class="btn-group" role="group">
+    			<button type="button" class="btn btn-default selectButton">All</button>
+  			</div>
+		</div>
+
+		<br/>
 
 		<!-- PANEL -->
 		<div class="panel panel-default ">
 
  			<div class="panel-body">
- 				<h3 >Q&A<br/><br/></h3>
+ 				<h3 >Q: Where can I get some Quinoa?<br/><br/></h3>
 
-
-    		Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ego vero isti, inquam, permitto. Iam id ipsum absurdum, maximum malum neglegi. Duo Reges: constructio interrete. Ergo hoc quidem apparet, nos ad agendum esse natos. Illa sunt similia: hebes acies est cuipiam oculorum, corpore alius senescit; Ad corpus diceres pertinere-, sed ea, quae dixi, ad corpusne refers?
+    		A: Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ego vero isti, inquam, permitto. Iam id ipsum absurdum, maximum malum neglegi. Duo Reges: constructio interrete. Ergo hoc quidem apparet, nos ad agendum esse natos. Illa sunt similia: hebes acies est cuipiam oculorum, corpore alius senescit; Ad corpus diceres pertinere-, sed ea, quae dixi, ad corpusne refers?
 
 			Itaque haec cum illis est dissensio, cum Peripateticis nulla sane. Rationis enim perfectio est virtus; Et quidem saepe quaerimus verbum Latinum par Graeco et quod idem valeat; Praeclare enim Plato: Beatum, cui etiam in senectute contigerit, ut sapientiam verasque opiniones assequi possit. Et quidem, inquit, vehementer errat; Quid ait Aristoteles reliquique Platonis alumni?
 
 			Cur, nisi quod turpis oratio est? Hoc etsi multimodis reprehendi potest, tamen accipio, quod dant. Si longus, levis dictata sunt. Aut unde est hoc contritum vetustate proverbium: quicum in tenebris? Quos quidem tibi studiose et diligenter tractandos magnopere censeo.
+			<br/><br/>
 
+  			<button type="button" class="btn btn-default"><span class="glyphicon glyphicon-triangle-top"></span></button>
+  			<button type="button" class="btn btn-default"><span class="glyphicon glyphicon-triangle-bottom"></span></button>
+			<button type="button" class="btn btn-default"><span class="glyphicon glyphicon-comment"></span>  Add Comment</button>
   			</div>
 		</div>
 
+		<!-- PANEL -->
+		<div class="panel panel-default ">
 
+ 			<div class="panel-body">
+ 				<h3 >Q: What are the best gluten-free foods for losing weight?<br/><br/></h3>
 
+    		A: Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ego vero isti, inquam, permitto. Iam id ipsum absurdum, maximum malum neglegi. Duo Reges: constructio interrete. Ergo hoc quidem apparet, nos ad agendum esse natos. Illa sunt similia: hebes acies est cuipiam oculorum, corpore alius senescit; Ad corpus diceres pertinere-, sed ea, quae dixi, ad corpusne refers?
+
+			Itaque haec cum illis est dissensio, cum Peripateticis nulla sane. Rationis enim perfectio est virtus; Et quidem saepe quaerimus verbum Latinum par Graeco et quod idem valeat; Praeclare enim Plato: Beatum, cui etiam in senectute contigerit, ut sapientiam verasque opiniones assequi possit. Et quidem, inquit, vehementer errat; Quid ait Aristoteles reliquique Platonis alumni?
+
+			Cur, nisi quod turpis oratio est? Hoc etsi multimodis reprehendi potest, tamen accipio, quod dant. Si longus, levis dictata sunt. Aut unde est hoc contritum vetustate proverbium: quicum in tenebris? Quos quidem tibi studiose et diligenter tractandos magnopere censeo.
+			<br/><br/>
+
+  			<button type="button" class="btn btn-default"><span class="glyphicon glyphicon-triangle-top"></span></button>
+  			<button type="button" class="btn btn-default"><span class="glyphicon glyphicon-triangle-bottom"></span></button>
+			<button type="button" class="btn btn-default"><span class="glyphicon glyphicon-comment"></span>  Add Comment</button>
+  			</div>
+		</div>
 
 	</div>
-
 
 
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
