--- a/static/recipes.html
+++ b/static/recipes.html
@@ -39,6 +39,11 @@
 		text-shadow: 2px 2px 3px #17A57D;
 	}
 
+	/* Custom style for the selector buttons */
+	.selectButton {
+		font-size:1em;
+	}
+
 .navbar-default {
 	background-color: #87b822;
 	border-color: #6e931d;
@@ -148,41 +153,61 @@
  		 <p>This is the place where you can find foods suitable for your diets and allergies.</p>
 		</div>
  -->
+ 		<!-- NO EASY WAY TO CHANGE THEIR COLORS BUT GOOGLE IT IN FREE TIME -->
+ 		<div class="btn-group btn-group-justified" role="group" aria-label="...">
+  			<div class="btn-group" role="group">
+    			<button type="button" class="btn btn-default btn-success selectButton">Popular</button>
+  			</div>
+  			<div class="btn-group" role="group">
+    			<button type="button" class="btn btn-default selectButton">New</button>
+  			</div>
+  			<div class="btn-group" role="group">
+    			<button type="button" class="btn btn-default selectButton">All</button>
+  			</div>
+		</div>
+		<br/>
 
-
-		<!-- PANEL -->
 		<div class="panel panel-default ">
-
  			<div class="panel-body">
- 				<h3 >Recipes<br/><br/></h3>
+ 			<h3 >Vegan Snack Recipe<br/><br/></h3>
 
  				<div class="row">
 
-			<!-- PICTURE 1 -->
-	  		<div class="col-xs-6 col-md-3">
-	   		 <a href="#" class="thumbnail">
-	      	<img src="https://c1.staticflickr.com/3/2759/4218998081_ef0de9fbc9_z.jpg?zz=1">
-	    	</a>
-	  		</div>
+				<!-- PICTURE 2 -->
+		  		<div class="col-xs-6 col-md-3">
+		    	<a href="#" class="thumbnail">
+		    	<img src="https://c2.staticflickr.com/8/7163/6750034613_2806e59dff_b.jpg">
+		    	</a>
+		  		</div>
 
-			<!-- PICTURE 2 -->
-	  		<div class="col-xs-6 col-md-3">
-	    	<a href="#" class="thumbnail">
-	    	<img src="https://c2.staticflickr.com/8/7163/6750034613_2806e59dff_b.jpg">
-	    	</a>
+				<!-- PICTURE 1 -->
+		  		<div class="col-xs-6 col-md-3">
+		   		 <a href="#" class="thumbnail">
+		      	<img src="https://c1.staticflickr.com/3/2759/4218998081_ef0de9fbc9_z.jpg?zz=1">
+		    	</a>
+		  		</div>
 
-	  		</div>
-			</div>
+				</div>
 
-    		Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ego vero isti, inquam, permitto. Iam id ipsum absurdum, maximum malum neglegi. Duo Reges: constructio interrete. Ergo hoc quidem apparet, nos ad agendum esse natos. Illa sunt similia: hebes acies est cuipiam oculorum, corpore alius senescit; Ad corpus diceres pertinere-, sed ea, quae dixi, ad corpusne refers?
+				Ingredients:
+				<br/><br/>
+				<ul>
+					<li>100g Flour</li>
+					<li>2 eggs</li>
+					<li>1 tbsp honey</li>
+				</ul>
+				<br/>
 
-			Itaque haec cum illis est dissensio, cum Peripateticis nulla sane. Rationis enim perfectio est virtus; Et quidem saepe quaerimus verbum Latinum par Graeco et quod idem valeat; Praeclare enim Plato: Beatum, cui etiam in senectute contigerit, ut sapientiam verasque opiniones assequi possit. Et quidem, inquit, vehementer errat; Quid ait Aristoteles reliquique Platonis alumni?
+    			1. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ego vero isti, inquam, permitto. Iam id ipsum absurdum, maximum malum neglegi. Duo Reges: constructio interrete. Ergo hoc quidem apparet, nos ad agendum esse natos. Illa sunt similia: hebes acies est cuipiam oculorum, corpore alius senescit; Ad corpus diceres pertinere-, sed ea, quae dixi, ad corpusne refers?
+    			<br/><br/>
 
-			Cur, nisi quod turpis oratio est? Hoc etsi multimodis reprehendi potest, tamen accipio, quod dant. Si longus, levis dictata sunt. Aut unde est hoc contritum vetustate proverbium: quicum in tenebris? Quos quidem tibi studiose et diligenter tractandos magnopere censeo.
+    			2. Nulla et vulputate libero, varius viverra orci. Quisque nunc leo, bibendum eget vulputate ac, imperdiet id diam. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Fusce neque mi, bibendum in molestie at, maximus viverra ante. Maecenas eu metus consequat, fermentum mi eu, consectetur velit. Vestibulum condimentum neque sed quam scelerisque fringilla
+    			<br/><br/>
+
+    			3. Sed hendrerit tempor nibh, nec dignissim mi hendrerit eget. Pellentesque magna tortor, auctor eget semper at, ornare ac nisl. Morbi gravida ex gravida, euismod nunc nec, laoreet felis. Vivamus volutpat elit quam, in scelerisque odio porttitor sit amet. Praesent scelerisque nulla sit amet arcu vestibulum pharetra. Donec euismod orci a risus vehicula, quis facilisis augue bibendum. 
 
   			</div>
 		</div>
-
 
 
 
