--- a/static/index.html
+++ b/static/index.html
@@ -121,8 +121,13 @@
 					<li class="active"> <a href="index.html" > <span class="glyphicon glyphicon-home"></span>  Home </a></li>
 					<li> <a href="recipes.html"><span class="glyphicon glyphicon-list"> </span>  Recipes </a></li>
 					<li> <a href="qa.html" > <span class="glyphicon glyphicon-comment"></span> Q&A </a></li>
-					<li> <a href="profile.html" ><span class="glyphicon glyphicon-search"></span> Search </a></li>
 				</ul>
+
+				<form class="navbar-form navbar-left" role="search">
+        			<div class="form-group">
+          				<input type="text" class="form-control" placeholder="Search">
+        			</div>
+      			</form>
 
 				<ul class="nav navbar-nav navbar-right">
 					<li> <a href="" ><span class="glyphicon glyphicon-user"></span> Profile </a></li>
@@ -186,27 +191,42 @@
 		<!-- DUPLICATE PANEL -->
 		<div class="panel panel-default ">
  			<div class="panel-body">
- 					    <h3 >Oh No Not The Same Post Again<br/><br/></h3>
+ 			<h3 >Vegan Snack Recipe<br/><br/></h3>
 
  				<div class="row">
 
-			<!-- PICTURE 2 -->
-	  		<div class="col-xs-6 col-md-3">
-	    	<a href="#" class="thumbnail">
-	    	<img src="https://c2.staticflickr.com/8/7163/6750034613_2806e59dff_b.jpg">
-	    	</a>
-	  		</div>
+				<!-- PICTURE 2 -->
+		  		<div class="col-xs-6 col-md-3">
+		    	<a href="#" class="thumbnail">
+		    	<img src="https://c2.staticflickr.com/8/7163/6750034613_2806e59dff_b.jpg">
+		    	</a>
+		  		</div>
 
-			<!-- PICTURE 1 -->
-	  		<div class="col-xs-6 col-md-3">
-	   		 <a href="#" class="thumbnail">
-	      	<img src="https://c1.staticflickr.com/3/2759/4218998081_ef0de9fbc9_z.jpg?zz=1">
-	    	</a>
-	  		</div>
+				<!-- PICTURE 1 -->
+		  		<div class="col-xs-6 col-md-3">
+		   		 <a href="#" class="thumbnail">
+		      	<img src="https://c1.staticflickr.com/3/2759/4218998081_ef0de9fbc9_z.jpg?zz=1">
+		    	</a>
+		  		</div>
 
-			</div>
+				</div>
 
-    		Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ego vero isti, inquam, permitto. Iam id ipsum absurdum, maximum malum neglegi. Duo Reges: constructio interrete. Ergo hoc quidem apparet, nos ad agendum esse natos. Illa sunt similia: hebes acies est cuipiam oculorum, corpore alius senescit; Ad corpus diceres pertinere-, sed ea, quae dixi, ad corpusne refers?
+				Ingredients:
+				<br/><br/>
+				<ul>
+					<li>100g Flour</li>
+					<li>2 eggs</li>
+					<li>1 tbsp honey</li>
+				</ul>
+				<br/>
+
+    			1. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ego vero isti, inquam, permitto. Iam id ipsum absurdum, maximum malum neglegi. Duo Reges: constructio interrete. Ergo hoc quidem apparet, nos ad agendum esse natos. Illa sunt similia: hebes acies est cuipiam oculorum, corpore alius senescit; Ad corpus diceres pertinere-, sed ea, quae dixi, ad corpusne refers?
+    			<br/><br/>
+
+    			2. Nulla et vulputate libero, varius viverra orci. Quisque nunc leo, bibendum eget vulputate ac, imperdiet id diam. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Fusce neque mi, bibendum in molestie at, maximus viverra ante. Maecenas eu metus consequat, fermentum mi eu, consectetur velit. Vestibulum condimentum neque sed quam scelerisque fringilla
+    			<br/><br/>
+
+    			3. Sed hendrerit tempor nibh, nec dignissim mi hendrerit eget. Pellentesque magna tortor, auctor eget semper at, ornare ac nisl. Morbi gravida ex gravida, euismod nunc nec, laoreet felis. Vivamus volutpat elit quam, in scelerisque odio porttitor sit amet. Praesent scelerisque nulla sit amet arcu vestibulum pharetra. Donec euismod orci a risus vehicula, quis facilisis augue bibendum. 
 
   			</div>
 		</div>
