--- a/static/profile.html
+++ b/static/profile.html
@@ -26,9 +26,10 @@
 		padding:10px 0px 0px 0px;
 	}
 
-	/*	.jumbotron {
-		background-color: #e9f1d0;
-	}*/
+		.jumbotron {
+		background-color: #f8faef;
+	}
+
 	.panel-body {
 		background-color: #f8faef;
 	}
@@ -37,6 +38,11 @@
 		font-family: "Pacifico", serif;
 		font-size: 22pt;
 		text-shadow: 2px 2px 3px #17A57D;
+	}
+
+	/* Custom style for the selector buttons */
+	.selectButton {
+		font-size:1em;
 	}
 
 
@@ -144,20 +150,30 @@
 
 	<div class="container">
 
-		<!-- <div class="jumbotron">
- 		 <h1>Welcome to nuTriton!</h1>
- 		 <p>This is the place where you can find foods suitable for your diets and allergies.</p>
+		<div class="jumbotron">
+ 		 <h1>Jane Doe</h1>
+ 		 <!-- <p>This is the place where you can find foods suitable for your diets and allergies.</p> -->
 		</div>
- -->
 
+		<!-- PANEL -->
+		<!-- NO EASY WAY TO CHANGE THEIR COLORS BUT GOOGLE IT IN FREE TIME -->
+ 		<div class="btn-group btn-group-justified" role="group" aria-label="...">
+  			<div class="btn-group" role="group">
+    			<button type="button" class="btn btn-default btn-success selectButton">My Posts</button>
+  			</div>
+  			<div class="btn-group" role="group">
+    			<button type="button" class="btn btn-default selectButton">Favorited Posts</button>
+  			</div>
+
+		</div>
+		<br/>
 
 		<!-- PANEL -->
 		<div class="panel panel-default ">
 
  			<div class="panel-body">
- 				<h3 >Jane Doe<br/><br/></h3>
 
-			<strong>Your Posts</strong>
+			<strong>My Favourite Vegetarian Smoothies</strong>
 			<br/>
 			<br/>
 
@@ -170,7 +186,41 @@
   			</div>
 		</div>
 
+		<!-- PANEL -->
+		<div class="panel panel-default ">
 
+ 			<div class="panel-body">
+
+			<strong>How To Make A Delicious Vegetarian Snack in 15 Minutes</strong>
+			<br/>
+			<br/>
+
+    		Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ego vero isti, inquam, permitto. Iam id ipsum absurdum, maximum malum neglegi. Duo Reges: constructio interrete. Ergo hoc quidem apparet, nos ad agendum esse natos. Illa sunt similia: hebes acies est cuipiam oculorum, corpore alius senescit; Ad corpus diceres pertinere-, sed ea, quae dixi, ad corpusne refers?
+
+			Itaque haec cum illis est dissensio, cum Peripateticis nulla sane. Rationis enim perfectio est virtus; Et quidem saepe quaerimus verbum Latinum par Graeco et quod idem valeat; Praeclare enim Plato: Beatum, cui etiam in senectute contigerit, ut sapientiam verasque opiniones assequi possit. Et quidem, inquit, vehementer errat; Quid ait Aristoteles reliquique Platonis alumni?
+
+			Cur, nisi quod turpis oratio est? Hoc etsi multimodis reprehendi potest, tamen accipio, quod dant. Si longus, levis dictata sunt. Aut unde est hoc contritum vetustate proverbium: quicum in tenebris? Quos quidem tibi studiose et diligenter tractandos magnopere censeo.
+
+  			</div>
+		</div>
+
+		<!-- PANEL -->
+		<div class="panel panel-default ">
+
+ 			<div class="panel-body">
+
+			<strong>Best Vegetarian Burger Restaurants</strong>
+			<br/>
+			<br/>
+
+    		Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ego vero isti, inquam, permitto. Iam id ipsum absurdum, maximum malum neglegi. Duo Reges: constructio interrete. Ergo hoc quidem apparet, nos ad agendum esse natos. Illa sunt similia: hebes acies est cuipiam oculorum, corpore alius senescit; Ad corpus diceres pertinere-, sed ea, quae dixi, ad corpusne refers?
+
+			Itaque haec cum illis est dissensio, cum Peripateticis nulla sane. Rationis enim perfectio est virtus; Et quidem saepe quaerimus verbum Latinum par Graeco et quod idem valeat; Praeclare enim Plato: Beatum, cui etiam in senectute contigerit, ut sapientiam verasque opiniones assequi possit. Et quidem, inquit, vehementer errat; Quid ait Aristoteles reliquique Platonis alumni?
+
+			Cur, nisi quod turpis oratio est? Hoc etsi multimodis reprehendi potest, tamen accipio, quod dant. Si longus, levis dictata sunt. Aut unde est hoc contritum vetustate proverbium: quicum in tenebris? Quos quidem tibi studiose et diligenter tractandos magnopere censeo.
+
+  			</div>
+		</div>
 
 
 	</div>
