changed the shadow

--- a/static/qa.html
+++ b/static/qa.html
@@ -46,7 +46,7 @@
 
 .navbar-default {
 	background-color: #87b822;
-	border-color: #6e931d;
+	border-color: #7ea32f;
 }
 .navbar-default .navbar-brand {
 	color: #eff2df;
@@ -65,17 +65,18 @@
 }
 .navbar-default .navbar-nav > .active > a, .navbar-default .navbar-nav > .active > a:hover, .navbar-default .navbar-nav > .active > a:focus {
 	color: #eff2df;
-	background-color: #6e931d;
+	background-color: #7ea32f;
+	box-shadow: 0 0 15px 1px #6e931d inset;
 }
 .navbar-default .navbar-nav > .open > a, .navbar-default .navbar-nav > .open > a:hover, .navbar-default .navbar-nav > .open > a:focus {
 	color: #eff2df;
-	background-color: #6e931d;
+	background-color: #7ea32f;
 }
 .navbar-default .navbar-toggle {
-	border-color: #6e931d;
+	border-color: #7ea32f;
 }
 .navbar-default .navbar-toggle:hover, .navbar-default .navbar-toggle:focus {
-	background-color: #6e931d;
+	background-color: #7ea32f;
 }
 .navbar-default .navbar-toggle .icon-bar {
 	background-color: #eff2df;
@@ -100,7 +101,7 @@
 	}
 	.navbar-default .navbar-nav .open .dropdown-menu > .active > a, .navbar-default .navbar-nav .open .dropdown-menu > .active > a:hover, .navbar-default .navbar-nav .open .dropdown-menu > .active > a:focus {
 		color: #eff2df;
-		background-color: #6e931d;
+		background-color: #7ea32f;
 	}
 }
     </style>
