--- a/static/profile.html
+++ b/static/profile.html
@@ -45,10 +45,9 @@
 		font-size:1em;
 	}
 
-
 .navbar-default {
 	background-color: #87b822;
-	border-color: #6e931d;
+	border-color: #7ea32f;
 }
 .navbar-default .navbar-brand {
 	color: #eff2df;
@@ -67,17 +66,18 @@
 }
 .navbar-default .navbar-nav > .active > a, .navbar-default .navbar-nav > .active > a:hover, .navbar-default .navbar-nav > .active > a:focus {
 	color: #eff2df;
-	background-color: #6e931d;
+	background-color: #7ea32f;
+	box-shadow: 0 0 15px 1px #6e931d inset;
 }
 .navbar-default .navbar-nav > .open > a, .navbar-default .navbar-nav > .open > a:hover, .navbar-default .navbar-nav > .open > a:focus {
 	color: #eff2df;
-	background-color: #6e931d;
+	background-color: #7ea32f;
 }
 .navbar-default .navbar-toggle {
-	border-color: #6e931d;
+	border-color: #7ea32f;
 }
 .navbar-default .navbar-toggle:hover, .navbar-default .navbar-toggle:focus {
-	background-color: #6e931d;
+	background-color: #7ea32f;
 }
 .navbar-default .navbar-toggle .icon-bar {
 	background-color: #eff2df;
@@ -102,7 +102,7 @@
 	}
 	.navbar-default .navbar-nav .open .dropdown-menu > .active > a, .navbar-default .navbar-nav .open .dropdown-menu > .active > a:hover, .navbar-default .navbar-nav .open .dropdown-menu > .active > a:focus {
 		color: #eff2df;
-		background-color: #6e931d;
+		background-color: #7ea32f;
 	}
 }
     </style>
