changed shadow to only top

--- a/static/index.html
+++ b/static/index.html
@@ -62,7 +62,7 @@
 .navbar-default .navbar-nav > .active > a, .navbar-default .navbar-nav > .active > a:hover, .navbar-default .navbar-nav > .active > a:focus {
 	color: #eff2df;
 	background-color: #7ea32f;
-	box-shadow: 0 0 15px 1px #6e931d inset;
+	box-shadow: inset 0px 10px 25px -10px #536b20;
 }
 .navbar-default .navbar-nav > .open > a, .navbar-default .navbar-nav > .open > a:hover, .navbar-default .navbar-nav > .open > a:focus {
 	color: #eff2df;
