added vote/comment/favorite buttons for all posts

--- a/static/recipes.html
+++ b/static/recipes.html
@@ -127,8 +127,13 @@
 					<li > <a href="index.html" > <span class="glyphicon glyphicon-home"></span>  Home </a></li>
 					<li class="active"> <a href="recipes.html"><span class="glyphicon glyphicon-list"> </span>  Recipes </a></li>
 					<li> <a href="qa.html" > <span class="glyphicon glyphicon-comment"></span> Q&A </a></li>
-					<li> <a href="" ><span class="glyphicon glyphicon-search"></span> Search </a></li>
 				</ul>
+
+				<form class="navbar-form navbar-left" role="search">
+        			<div class="form-group">
+          				<input type="text" class="form-control" placeholder="Search">
+        			</div>
+      			</form>
 
 				<ul class="nav navbar-nav navbar-right">
 					<li> <a href="profile.html" ><span class="glyphicon glyphicon-user"></span> Profile </a></li>
@@ -206,6 +211,13 @@
     			<br/><br/>
 
     			3. Sed hendrerit tempor nibh, nec dignissim mi hendrerit eget. Pellentesque magna tortor, auctor eget semper at, ornare ac nisl. Morbi gravida ex gravida, euismod nunc nec, laoreet felis. Vivamus volutpat elit quam, in scelerisque odio porttitor sit amet. Praesent scelerisque nulla sit amet arcu vestibulum pharetra. Donec euismod orci a risus vehicula, quis facilisis augue bibendum. 
+
+    			<br/><br/>
+
+    			<button type="button" class="btn btn-default"><span class="glyphicon glyphicon-triangle-top"></span></button>
+  				<button type="button" class="btn btn-default"><span class="glyphicon glyphicon-triangle-bottom"></span></button>
+				<button type="button" class="btn btn-default"><span class="glyphicon glyphicon-comment"></span>  Add Comment</button>
+				<button type="button" class="btn btn-default pull-right"><span class="glyphicon glyphicon-star"></span></button>
 
   			</div>
 		</div>
