--- a/static/profile.html
+++ b/static/profile.html
@@ -128,8 +128,13 @@
 					<li> <a href="index.html" > <span class="glyphicon glyphicon-home"></span>  Home </a></li>
 					<li> <a href="recipes.html"><span class="glyphicon glyphicon-list"> </span>  Recipes </a></li>
 					<li> <a href="qa.html" > <span class="glyphicon glyphicon-comment"></span> Q&A </a></li>
-					<li> <a href="" ><span class="glyphicon glyphicon-search"></span> Search </a></li>
 				</ul>
+				
+				<form class="navbar-form navbar-left" role="search">
+        			<div class="form-group">
+          				<input type="text" class="form-control" placeholder="Search">
+        			</div>
+      			</form>
 
 				<ul class="nav navbar-nav navbar-right">
 					<li class="active"> <a href="profile.html" ><span class="glyphicon glyphicon-user"></span> Profile </a></li>
@@ -182,6 +187,11 @@
 			Itaque haec cum illis est dissensio, cum Peripateticis nulla sane. Rationis enim perfectio est virtus; Et quidem saepe quaerimus verbum Latinum par Graeco et quod idem valeat; Praeclare enim Plato: Beatum, cui etiam in senectute contigerit, ut sapientiam verasque opiniones assequi possit. Et quidem, inquit, vehementer errat; Quid ait Aristoteles reliquique Platonis alumni?
 
 			Cur, nisi quod turpis oratio est? Hoc etsi multimodis reprehendi potest, tamen accipio, quod dant. Si longus, levis dictata sunt. Aut unde est hoc contritum vetustate proverbium: quicum in tenebris? Quos quidem tibi studiose et diligenter tractandos magnopere censeo.
+			<br/><br/>
+			<button type="button" class="btn btn-default"><span class="glyphicon glyphicon-triangle-top"></span></button>
+  			<button type="button" class="btn btn-default"><span class="glyphicon glyphicon-triangle-bottom"></span></button>
+			<button type="button" class="btn btn-default"><span class="glyphicon glyphicon-comment"></span>  Add Comment</button>
+			<button type="button" class="btn btn-default pull-right"><span class="glyphicon glyphicon-star"></span></button>
 
   			</div>
 		</div>
@@ -200,8 +210,13 @@
 			Itaque haec cum illis est dissensio, cum Peripateticis nulla sane. Rationis enim perfectio est virtus; Et quidem saepe quaerimus verbum Latinum par Graeco et quod idem valeat; Praeclare enim Plato: Beatum, cui etiam in senectute contigerit, ut sapientiam verasque opiniones assequi possit. Et quidem, inquit, vehementer errat; Quid ait Aristoteles reliquique Platonis alumni?
 
 			Cur, nisi quod turpis oratio est? Hoc etsi multimodis reprehendi potest, tamen accipio, quod dant. Si longus, levis dictata sunt. Aut unde est hoc contritum vetustate proverbium: quicum in tenebris? Quos quidem tibi studiose et diligenter tractandos magnopere censeo.
+			<br/><br/>
+			<button type="button" class="btn btn-default"><span class="glyphicon glyphicon-triangle-top"></span></button>
+  			<button type="button" class="btn btn-default"><span class="glyphicon glyphicon-triangle-bottom"></span></button>
+			<button type="button" class="btn btn-default"><span class="glyphicon glyphicon-comment"></span>  Add Comment</button>
+			<button type="button" class="btn btn-default pull-right"><span class="glyphicon glyphicon-star"></span></button>  		
 
-  			</div>
+			</div>
 		</div>
 
 		<!-- PANEL -->
@@ -218,7 +233,12 @@
 			Itaque haec cum illis est dissensio, cum Peripateticis nulla sane. Rationis enim perfectio est virtus; Et quidem saepe quaerimus verbum Latinum par Graeco et quod idem valeat; Praeclare enim Plato: Beatum, cui etiam in senectute contigerit, ut sapientiam verasque opiniones assequi possit. Et quidem, inquit, vehementer errat; Quid ait Aristoteles reliquique Platonis alumni?
 
 			Cur, nisi quod turpis oratio est? Hoc etsi multimodis reprehendi potest, tamen accipio, quod dant. Si longus, levis dictata sunt. Aut unde est hoc contritum vetustate proverbium: quicum in tenebris? Quos quidem tibi studiose et diligenter tractandos magnopere censeo.
-
+			<br/><br/>
+			<button type="button" class="btn btn-default"><span class="glyphicon glyphicon-triangle-top"></span></button>
+  			<button type="button" class="btn btn-default"><span class="glyphicon glyphicon-triangle-bottom"></span></button>
+			<button type="button" class="btn btn-default"><span class="glyphicon glyphicon-comment"></span>  Add Comment</button>
+			<button type="button" class="btn btn-default pull-right"><span class="glyphicon glyphicon-star"></span></button>
+  			
   			</div>
 		</div>
 
