--- a/static/qa.html
+++ b/static/qa.html
@@ -127,8 +127,13 @@
 					<li > <a href="index.html" > <span class="glyphicon glyphicon-home"></span>  Home </a></li>
 					<li > <a href="recipes.html"><span class="glyphicon glyphicon-list"> </span>  Recipes </a></li>
 					<li class="active"> <a href="qa.html" > <span class="glyphicon glyphicon-comment"></span> Q&A </a></li>
-					<li> <a href="" ><span class="glyphicon glyphicon-search"></span> Search </a></li>
 				</ul>
+
+				<form class="navbar-form navbar-left" role="search">
+        			<div class="form-group">
+          				<input type="text" class="form-control" placeholder="Search">
+        			</div>
+      			</form>
 
 				<ul class="nav navbar-nav navbar-right">
 					<li> <a href="profile.html" ><span class="glyphicon glyphicon-user"></span> Profile </a></li>
@@ -185,8 +190,9 @@
 
   			<button type="button" class="btn btn-default"><span class="glyphicon glyphicon-triangle-top"></span></button>
   			<button type="button" class="btn btn-default"><span class="glyphicon glyphicon-triangle-bottom"></span></button>
-			<button type="button" class="btn btn-default"><span class="glyphicon glyphicon-comment"></span>  Add Comment</button>
-  			</div>
+			<button type="button" class="btn btn-default"><span class="glyphicon glyphicon-comment"></span>  Add Answer</button>
+ 			<button type="button" class="btn btn-default pull-right"><span class="glyphicon glyphicon-star"></span></button>
+ 			</div>
 		</div>
 
 		<!-- PANEL -->
@@ -204,7 +210,8 @@
 
   			<button type="button" class="btn btn-default"><span class="glyphicon glyphicon-triangle-top"></span></button>
   			<button type="button" class="btn btn-default"><span class="glyphicon glyphicon-triangle-bottom"></span></button>
-			<button type="button" class="btn btn-default"><span class="glyphicon glyphicon-comment"></span>  Add Comment</button>
+			<button type="button" class="btn btn-default"><span class="glyphicon glyphicon-comment"></span>  Add Answer</button>
+			<button type="button" class="btn btn-default pull-right"><span class="glyphicon glyphicon-star"></span></button>
   			</div>
 		</div>
 
