added js image expanding feature

--- a/static/recipes.html
+++ b/static/recipes.html
@@ -7,11 +7,12 @@
     <title>nuTriton</title>
 
     <!-- Font -->
-<link href='http://fonts.googleapis.com/css?family=Source+Sans+Pro|Lato|Open+Sans:400,600' rel='stylesheet' type='text/css'>
+	<link href='http://fonts.googleapis.com/css?family=Source+Sans+Pro|Lato|Open+Sans:400,600' rel='stylesheet' type='text/css'>
+	<link href='http://fonts.googleapis.com/css?family=Lato:300,400,700,300italic,400italic,700italic|Ubuntu:300,400,500,700,300italic,400italic,500italic|Open+Sans:400italic,600italic,700italic,700,600,400|Roboto:400,300italic,300,400italic,500,500italic,700,700italic|Raleway:400,300,500,600,700|Pacifico' rel='stylesheet' type='text/css'>
     <!-- Bootstrap -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/css/bootstrap.min.css">
-<link href='http://fonts.googleapis.com/css?family=Lato:300,400,700,300italic,400italic,700italic|Ubuntu:300,400,500,700,300italic,400italic,500italic|Open+Sans:400italic,600italic,700italic,700,600,400|Roboto:400,300italic,300,400italic,500,500italic,700,700italic|Raleway:400,300,500,600,700|Pacifico' rel='stylesheet' type='text/css'>
-
+	<!-- Lightbox -->
+	<link href="css/lightbox.css" rel="stylesheet" />
     
     <style>
 
@@ -176,15 +177,15 @@
 
 				<!-- PICTURE 2 -->
 		  		<div class="col-xs-6 col-md-3">
-		    	<a href="#" class="thumbnail">
-		    	<img src="https://c2.staticflickr.com/8/7163/6750034613_2806e59dff_b.jpg">
+		    	<a href="https://c2.staticflickr.com/8/7163/6750034613_2806e59dff_b.jpg" data-lightbox="image-3" class="thumbnail">
+		    	<img src="https://c2.staticflickr.com/8/7163/6750034613_2806e59dff_b.jpg"/>
 		    	</a>
 		  		</div>
 
 				<!-- PICTURE 1 -->
 		  		<div class="col-xs-6 col-md-3">
-		   		 <a href="#" class="thumbnail">
-		      	<img src="https://c1.staticflickr.com/3/2759/4218998081_ef0de9fbc9_z.jpg?zz=1">
+		   		 <a href="https://c1.staticflickr.com/3/2759/4218998081_ef0de9fbc9_z.jpg?zz=1" data-lightbox="image-3" class="thumbnail">
+		      	<img src="https://c1.staticflickr.com/3/2759/4218998081_ef0de9fbc9_z.jpg?zz=1"/>
 		    	</a>
 		  		</div>
 
@@ -220,5 +221,10 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
     <!-- Include all compiled plugins (below), or include individual files as needed -->
     <script src="js/bootstrap.min.js"></script>
+	
+	<!-- The following two js are Lightbox jquery scripts -->
+	<script src="js/jquery-1.11.0.min.js"></script>
+	<script src="js/lightbox.min.js"></script>
+	
   </body>
 </html>
