--- a/static/qa.html
+++ b/static/qa.html
@@ -7,11 +7,12 @@
     <title>nuTriton</title>
 
     <!-- Font -->
-<link href='http://fonts.googleapis.com/css?family=Source+Sans+Pro|Lato|Open+Sans:400,600' rel='stylesheet' type='text/css'>
-    <!-- Bootstrap -->
+	<link href='http://fonts.googleapis.com/css?family=Source+Sans+Pro|Lato|Open+Sans:400,600' rel='stylesheet' type='text/css'>
+	<link href='http://fonts.googleapis.com/css?family=Lato:300,400,700,300italic,400italic,700italic|Ubuntu:300,400,500,700,300italic,400italic,500italic|Open+Sans:400italic,600italic,700italic,700,600,400|Roboto:400,300italic,300,400italic,500,500italic,700,700italic|Raleway:400,300,500,600,700|Pacifico' rel='stylesheet' type='text/css'>
+	<!-- Bootstrap -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/css/bootstrap.min.css">
-<link href='http://fonts.googleapis.com/css?family=Lato:300,400,700,300italic,400italic,700italic|Ubuntu:300,400,500,700,300italic,400italic,500italic|Open+Sans:400italic,600italic,700italic,700,600,400|Roboto:400,300italic,300,400italic,500,500italic,700,700italic|Raleway:400,300,500,600,700|Pacifico' rel='stylesheet' type='text/css'>
-
+	<!-- Lightbox -->
+	<link href="css/lightbox.css" rel="stylesheet" />
     
     <style>
 
@@ -124,14 +125,14 @@
 
 			<div class="collapse navbar-collapse">
 				<ul class="nav navbar-nav">
-					<li > <a href="index.html" > <span class="glyphicon glyphicon-home"></span>  Home </a></li>
+					<li > <a href="index.html"> <span class="glyphicon glyphicon-home"></span>  Home </a></li>
 					<li > <a href="recipes.html"><span class="glyphicon glyphicon-list"> </span>  Recipes </a></li>
-					<li class="active"> <a href="qa.html" > <span class="glyphicon glyphicon-comment"></span> Q&A </a></li>
+					<li class="active"> <a href="qa.html"> <span class="glyphicon glyphicon-comment"></span> Q&A </a></li>
 					<li> <a href="" ><span class="glyphicon glyphicon-search"></span> Search </a></li>
 				</ul>
 
 				<ul class="nav navbar-nav navbar-right">
-					<li> <a href="profile.html" ><span class="glyphicon glyphicon-user"></span> Profile </a></li>
+					<li> <a href="profile.html"><span class="glyphicon glyphicon-user"></span> Profile </a></li>
 				</ul>
 			</div>
 
@@ -215,5 +216,10 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
     <!-- Include all compiled plugins (below), or include individual files as needed -->
     <script src="js/bootstrap.min.js"></script>
+	
+	<!-- The following two js are Lightbox jquery scripts -->
+	<script src="js/jquery-1.11.0.min.js"></script>
+	<script src="js/lightbox.min.js"></script>
+	
   </body>
 </html>
