tidied up code, removed extra search button

--- a/static/index.html
+++ b/static/index.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html lang="en">
-<!-- TESTING CONFLICT -->
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -107,6 +106,7 @@
   </head>
   <body>
 
+  	<!-- NAVBAR -->
 	<div class="navbar navbar-default navbar-fixed-top">
 		<div class="container">
 			<div class="navbar-header"> 
@@ -137,11 +137,7 @@
 					<li> <a href="profile.html" ><span class="glyphicon glyphicon-user"></span> Profile </a></li>
 				</ul>
 			</div>
-
-
 		</div>
-
-
 	</div>
 	<div class="container"></div>
 		</br>
