--- a/static/recipes.html
+++ b/static/recipes.html
@@ -110,6 +110,7 @@
   </head>
   <body>
 
+  <!-- NAVBAR -->
 	<div class="navbar navbar-default navbar-fixed-top">
 		<div class="container">
 			<div class="navbar-header"> 
@@ -140,11 +141,7 @@
 					<li> <a href="profile.html" ><span class="glyphicon glyphicon-user"></span> Profile </a></li>
 				</ul>
 			</div>
-
-
 		</div>
-
-
 	</div>
 	<div class="container"></div>
 		</br>
