--- a/static/profile.html
+++ b/static/profile.html
@@ -111,6 +111,7 @@
   </head>
   <body>
 
+  	<!-- NAVBAR -->
 	<div class="navbar navbar-default navbar-fixed-top">
 		<div class="container">
 			<div class="navbar-header"> 
@@ -141,11 +142,7 @@
 					<li class="active"> <a href="profile.html" ><span class="glyphicon glyphicon-user"></span> Profile </a></li>
 				</ul>
 			</div>
-
-
 		</div>
-
-
 	</div>
 	<div class="container"></div>
 		</br>
