--- a/static/qa.html
+++ b/static/qa.html
@@ -110,6 +110,7 @@
   </head>
   <body>
 
+	<!-- NAVBAR -->
 	<div class="navbar navbar-default navbar-fixed-top">
 		<div class="container">
 			<div class="navbar-header"> 
@@ -128,7 +129,6 @@
 					<li > <a href="index.html"> <span class="glyphicon glyphicon-home"></span>  Home </a></li>
 					<li > <a href="recipes.html"><span class="glyphicon glyphicon-list"> </span>  Recipes </a></li>
 					<li class="active"> <a href="qa.html"> <span class="glyphicon glyphicon-comment"></span> Q&A </a></li>
-					<li> <a href="" ><span class="glyphicon glyphicon-search"></span> Search </a></li>
 				</ul>
 
 				<form class="navbar-form navbar-left" role="search">
@@ -141,12 +141,9 @@
 					<li> <a href="profile.html"><span class="glyphicon glyphicon-user"></span> Profile </a></li>
 				</ul>
 			</div>
-
-
 		</div>
-
-
 	</div>
+
 	<div class="container"></div>
 		</br>
 		</br>
