tidied up spaces

--- a/static/recipes.html
+++ b/static/recipes.html
@@ -110,7 +110,7 @@
   </head>
   <body>
 
-  <!-- NAVBAR -->
+  	<!-- NAVBAR -->
 	<div class="navbar navbar-default navbar-fixed-top">
 		<div class="container">
 			<div class="navbar-header"> 
@@ -120,7 +120,6 @@
 					<span class="icon-bar"></span>
 					<span class="icon-bar"></span>
 					<span class="icon-bar"></span>
-
 				</button>
 			</div>
 
@@ -151,12 +150,12 @@
 	</div>
 
 	<div class="container">
-
 		<!-- <div class="jumbotron">
  		 <h1>Welcome to nuTriton!</h1>
  		 <p>This is the place where you can find foods suitable for your diets and allergies.</p>
 		</div>
- -->
+ 		-->
+
  		<!-- NO EASY WAY TO CHANGE THEIR COLORS BUT GOOGLE IT IN FREE TIME -->
  		<div class="btn-group btn-group-justified" role="group" aria-label="...">
   			<div class="btn-group" role="group">
@@ -171,6 +170,7 @@
 		</div>
 		<br/>
 
+		<!-- PANEL -->
 		<div class="panel panel-default ">
  			<div class="panel-body">
  			<h3 >Vegan Snack Recipe<br/><br/></h3>
@@ -219,11 +219,7 @@
 
   			</div>
 		</div>
-
-
-
 	</div>
-
 
 
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
