added details to profile page jumbotron

--- a/static/profile.html
+++ b/static/profile.html
@@ -154,7 +154,7 @@
 
 		<div class="jumbotron">
  		 <h1>Jane Doe</h1>
- 		 <!-- <p>This is the place where you can find foods suitable for your diets and allergies.</p> -->
+ 		 <p>@jane_doe | 423 followers | 236 following </p>
 		</div>
 
 		<!-- PANEL -->
