added childhood easter egg

--- a/static/index.html
+++ b/static/index.html
@@ -219,9 +219,10 @@
 				Ingredients:
 				<br/><br/>
 				<ul>
-					<li>100g Flour</li>
-					<li>2 eggs</li>
-					<li>1 tbsp honey</li>
+					<li>Sugar</li>
+					<li>Space</li>
+					<li>Everything nice</li>
+					<li>Chemical X</li>
 				</ul>
 				<br/>
 
