--- a/static/profile.html
+++ b/static/profile.html
@@ -164,6 +164,9 @@
     			<button type="button" class="btn btn-default btn-success selectButton">My Posts</button>
   			</div>
   			<div class="btn-group" role="group">
+    			<button type="button" class="btn btn-default selectButton">Photos</button>
+  			</div>
+  			<div class="btn-group" role="group">
     			<button type="button" class="btn btn-default selectButton">Favorited Posts</button>
   			</div>
 
