added messages tab and updated others to link to it

--- a/static/qa.html
+++ b/static/qa.html
@@ -137,6 +137,7 @@
       			</form>
 
 				<ul class="nav navbar-nav navbar-right">
+					<li> <a href="messages.html"><span class="glyphicon glyphicon-envelope"></span> Messages </a></li>
 					<li> <a href="profile.html"><span class="glyphicon glyphicon-user"></span> Profile </a></li>
 				</ul>
 			</div>
