--- a/static/messages.html
+++ b/static/messages.html
@@ -9,7 +9,7 @@
     <!-- Font -->
 	<link href='http://fonts.googleapis.com/css?family=Source+Sans+Pro|Lato|Open+Sans:400,600' rel='stylesheet' type='text/css'>
 	<link href='http://fonts.googleapis.com/css?family=Lato:300,400,700,300italic,400italic,700italic|Ubuntu:300,400,500,700,300italic,400italic,500italic|Open+Sans:400italic,600italic,700italic,700,600,400|Roboto:400,300italic,300,400italic,500,500italic,700,700italic|Raleway:400,300,500,600,700|Pacifico' rel='stylesheet' type='text/css'>
-    <!-- Bootstrap -->
+	<!-- Bootstrap -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/css/bootstrap.min.css">
 	<!-- Lightbox -->
 	<link href="css/lightbox.css" rel="stylesheet" />
@@ -43,6 +43,11 @@
 	/* Custom style for the selector buttons */
 	.selectButton {
 		font-size:1em;
+	}
+
+	/* Custom style for list group item */
+	.list-group-item{
+		background-color: #f8faef;
 	}
 
 .navbar-default {
@@ -110,7 +115,7 @@
   </head>
   <body>
 
-  	<!-- NAVBAR -->
+	<!-- NAVBAR -->
 	<div class="navbar navbar-default navbar-fixed-top">
 		<div class="container">
 			<div class="navbar-header"> 
@@ -125,9 +130,9 @@
 
 			<div class="collapse navbar-collapse">
 				<ul class="nav navbar-nav">
-					<li > <a href="index.html" > <span class="glyphicon glyphicon-home"></span>  Home </a></li>
-					<li class="active"> <a href="recipes.html"><span class="glyphicon glyphicon-list"> </span>  Recipes </a></li>
-					<li> <a href="qa.html" > <span class="glyphicon glyphicon-comment"></span> Q&A </a></li>
+					<li > <a href="index.html"> <span class="glyphicon glyphicon-home"></span>  Home </a></li>
+					<li > <a href="recipes.html"><span class="glyphicon glyphicon-list"> </span>  Recipes </a></li>
+					<li > <a href="qa.html"> <span class="glyphicon glyphicon-comment"></span> Q&A </a></li>
 				</ul>
 
 				<form class="navbar-form navbar-left" role="search">
@@ -137,12 +142,13 @@
       			</form>
 
 				<ul class="nav navbar-nav navbar-right">
-					<li> <a href="messages.html"><span class="glyphicon glyphicon-envelope"></span> Messages </a></li>				
-					<li> <a href="profile.html" ><span class="glyphicon glyphicon-user"></span> Profile </a></li>
+					<li class="active"> <a href="messages.html"><span class="glyphicon glyphicon-envelope"></span> Messages </a></li>
+					<li> <a href="profile.html"><span class="glyphicon glyphicon-user"></span> Profile </a></li>
 				</ul>
 			</div>
 		</div>
 	</div>
+
 	<div class="container"></div>
 		</br>
 		</br>
@@ -151,75 +157,30 @@
 	</div>
 
 	<div class="container">
+
 		<!-- <div class="jumbotron">
  		 <h1>Welcome to nuTriton!</h1>
  		 <p>This is the place where you can find foods suitable for your diets and allergies.</p>
 		</div>
- 		-->
+ -->
+		<ul class="list-group">
+  			<li class="list-group-item">
+  				<h3>John Doe</h3> Hey let's meet up!
+  			</li>
+  			<li class="list-group-item">
+  				<h3>Mr. Jones</h3> I've got quinoa!
+  			</li>
+  			<li class="list-group-item">
+  				<h3>Johnny Appleseed</h3> Do you know a good vegan restaurant around here?
+  			</li>
+  			<li class="list-group-item">
+  				<h3>Jane Roe</h3> Check out this recipe!
+  			</li>
+  			<li class="list-group-item">
+  				<h3>Tommy Atkins</h3> Hey! How have you been?
+  			</li>
+		</ul>
 
- 		<!-- NO EASY WAY TO CHANGE THEIR COLORS BUT GOOGLE IT IN FREE TIME -->
- 		<div class="btn-group btn-group-justified" role="group" aria-label="...">
-  			<div class="btn-group" role="group">
-    			<button type="button" class="btn btn-default btn-success selectButton">Popular</button>
-  			</div>
-  			<div class="btn-group" role="group">
-    			<button type="button" class="btn btn-default selectButton">New</button>
-  			</div>
-  			<div class="btn-group" role="group">
-    			<button type="button" class="btn btn-default selectButton">All</button>
-  			</div>
-		</div>
-		<br/>
-
-		<!-- PANEL -->
-		<div class="panel panel-default ">
- 			<div class="panel-body">
- 			<h3 >Vegan Snack Recipe<br/><br/></h3>
-
- 				<div class="row">
-
-				<!-- PICTURE 2 -->
-		  		<div class="col-xs-6 col-md-3">
-		    	<a href="https://c2.staticflickr.com/8/7163/6750034613_2806e59dff_b.jpg" data-lightbox="image-3" class="thumbnail">
-		    	<img src="https://c2.staticflickr.com/8/7163/6750034613_2806e59dff_b.jpg"/>
-		    	</a>
-		  		</div>
-
-				<!-- PICTURE 1 -->
-		  		<div class="col-xs-6 col-md-3">
-		   		 <a href="https://c1.staticflickr.com/3/2759/4218998081_ef0de9fbc9_z.jpg?zz=1" data-lightbox="image-3" class="thumbnail">
-		      	<img src="https://c1.staticflickr.com/3/2759/4218998081_ef0de9fbc9_z.jpg?zz=1"/>
-		    	</a>
-		  		</div>
-
-				</div>
-
-				Ingredients:
-				<br/><br/>
-				<ul>
-					<li>100g Flour</li>
-					<li>2 eggs</li>
-					<li>1 tbsp honey</li>
-				</ul>
-				<br/>
-
-    			1. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ego vero isti, inquam, permitto. Iam id ipsum absurdum, maximum malum neglegi. Duo Reges: constructio interrete. Ergo hoc quidem apparet, nos ad agendum esse natos. Illa sunt similia: hebes acies est cuipiam oculorum, corpore alius senescit; Ad corpus diceres pertinere-, sed ea, quae dixi, ad corpusne refers?
-    			<br/><br/>
-
-    			2. Nulla et vulputate libero, varius viverra orci. Quisque nunc leo, bibendum eget vulputate ac, imperdiet id diam. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Fusce neque mi, bibendum in molestie at, maximus viverra ante. Maecenas eu metus consequat, fermentum mi eu, consectetur velit. Vestibulum condimentum neque sed quam scelerisque fringilla
-    			<br/><br/>
-
-    			3. Sed hendrerit tempor nibh, nec dignissim mi hendrerit eget. Pellentesque magna tortor, auctor eget semper at, ornare ac nisl. Morbi gravida ex gravida, euismod nunc nec, laoreet felis. Vivamus volutpat elit quam, in scelerisque odio porttitor sit amet. Praesent scelerisque nulla sit amet arcu vestibulum pharetra. Donec euismod orci a risus vehicula, quis facilisis augue bibendum. 
-
-    			<br/><br/>
-
-    			<button type="button" class="btn btn-default"><span class="glyphicon glyphicon-triangle-top"></span></button>
-  				<button type="button" class="btn btn-default"><span class="glyphicon glyphicon-triangle-bottom"></span></button>
-				<button type="button" class="btn btn-default"><span class="glyphicon glyphicon-comment"></span>  Add Comment</button>
-				<button type="button" class="btn btn-default pull-right"><span class="glyphicon glyphicon-star"></span></button>
-
-  			</div>
-		</div>
 	</div>
 
 
