--- a/static/profile.html
+++ b/static/profile.html
@@ -138,6 +138,7 @@
       			</form>
 
 				<ul class="nav navbar-nav navbar-right">
+					<li> <a href="messages.html"><span class="glyphicon glyphicon-envelope"></span> Messages </a></li>
 					<li class="active"> <a href="profile.html" ><span class="glyphicon glyphicon-user"></span> Profile </a></li>
 				</ul>
 			</div>
