--- a/static/recipes.html
+++ b/static/recipes.html
@@ -176,7 +176,7 @@
  			<div class="panel-body">
  			<h3 >Vegan Snack Recipe<br/><br/></h3>
 
-<!--  				<div class="row">
+ 				<div class="row">
 
 		  		<div class="col-xs-6 col-md-3">
 		    	<a href="https://c2.staticflickr.com/8/7163/6750034613_2806e59dff_b.jpg" data-lightbox="image-3" class="thumbnail">
@@ -189,7 +189,7 @@
 		      	<img src="https://c1.staticflickr.com/3/2759/4218998081_ef0de9fbc9_z.jpg?zz=1"/>
 		    	</a>
 		  		</div>
-				</div> -->
+				</div>
 
 				Ingredients:
 				<br/><br/>
