--- a/static/index.html
+++ b/static/index.html
@@ -160,7 +160,7 @@
  			<div class="panel-body">
  				<h3 >The Best Vegan Restaurants of 2014 in San Diego<br/><br/></h3>
 
-<!--  			<div class="row">
+ 			<div class="row">
 
 	  		<div class="col-xs-6 col-md-3">
 	   		 <a href="https://c1.staticflickr.com/3/2759/4218998081_ef0de9fbc9_z.jpg?zz=1" data-lightbox="image-1" class="thumbnail">
@@ -174,7 +174,7 @@
 	    	</a>
 
 	  		</div>
-			</div> -->
+			</div>
 
     		Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ego vero isti, inquam, permitto. Iam id ipsum absurdum, maximum malum neglegi. Duo Reges: constructio interrete. Ergo hoc quidem apparet, nos ad agendum esse natos. Illa sunt similia: hebes acies est cuipiam oculorum, corpore alius senescit; Ad corpus diceres pertinere-, sed ea, quae dixi, ad corpusne refers?
 
