--- a/static/index.html
+++ b/static/index.html
@@ -123,8 +123,7 @@
 			<div class="collapse navbar-collapse">
 				<ul class="nav navbar-nav">
 					<li class="active"> <a href="index.html" > <span class="glyphicon glyphicon-home"></span>  Home </a></li>
-					<li> <a href="recipes.html"><span class="glyphicon glyphicon-list"> </span>  Recipes </a></li>
-					<li> <a href="qa.html" > <span class="glyphicon glyphicon-comment"></span> Q&A </a></li>
+					<li> <a href="foodfinder.html" > <span class="glyphicon glyphicon-cutlery"></span> Food Finder </a></li>
 				</ul>
 
 				<form class="navbar-form navbar-left" role="search">
