Added profile icon, improved on upvoting/commenting system

--- a/static/index.html
+++ b/static/index.html
@@ -180,9 +180,8 @@
     		
     		<br/><br/>
 
-			<button type="button" class="btn btn-default"><span class="glyphicon glyphicon-triangle-top"></span></button>
-  			<button type="button" class="btn btn-default"><span class="glyphicon glyphicon-triangle-bottom"></span></button>
-			<button type="button" class="btn btn-default"><span class="glyphicon glyphicon-comment"></span>  Add Comment</button>
+			<button type="button" class="btn btn-default"><span class="glyphicon glyphicon-thumbs-up"></span> 74 </button>
+			<button type="button" class="btn btn-default"><span class="glyphicon glyphicon-comment"></span>  View Comments</button>
 			<button type="button" class="btn btn-default pull-right"><span class="glyphicon glyphicon-star"></span></button>
 
   			</div>
@@ -228,9 +227,8 @@
 
     			<br/><br/>
 
-    			<button type="button" class="btn btn-default"><span class="glyphicon glyphicon-triangle-top"></span></button>
-  			<button type="button" class="btn btn-default"><span class="glyphicon glyphicon-triangle-bottom"></span></button>
-			<button type="button" class="btn btn-default"><span class="glyphicon glyphicon-comment"></span>  Add Comment</button>
+    		<button type="button" class="btn btn-default"><span class="glyphicon glyphicon-thumbs-up"></span> 56 </button>
+			<button type="button" class="btn btn-default"><span class="glyphicon glyphicon-comment"></span>  View Comments</button>
 			<button type="button" class="btn btn-default pull-right"><span class="glyphicon glyphicon-star"></span></button>
 
   			</div>
