--- a/static/profile.html
+++ b/static/profile.html
@@ -27,8 +27,9 @@
 		padding:10px 0px 0px 0px;
 	}
 
-		.jumbotron {
+	.jumbotron {
 		background-color: #f8faef;
+		padding: 30px;
 	}
 
 	.panel-body {
@@ -153,8 +154,13 @@
 	<div class="container">
 
 		<div class="jumbotron">
- 		 <h1>Jane Doe</h1>
- 		 <p>@jane_doe | 423 followers | 236 following </p>
+
+ 		 <h1><img src="images/profile-icon.png" height="60" width="60"> Jane Doe</h1>
+ 		 <br/>
+ 		 <p>Location: La Jolla, CA</p>
+ 		 <p>Diet: Gluten-free, Vegetarian</p>
+ 		 <p>Bio: *Insert your bio here* </p>
+
 		</div>
 
 		<!-- PANEL -->
@@ -167,7 +173,7 @@
     			<button type="button" class="btn btn-default selectButton">Photos</button>
   			</div>
   			<div class="btn-group" role="group">
-    			<button type="button" class="btn btn-default selectButton">Favorited Posts</button>
+    			<button type="button" class="btn btn-default selectButton">Favorites</button>
   			</div>
 
 		</div>
@@ -188,9 +194,8 @@
 
 			Cur, nisi quod turpis oratio est? Hoc etsi multimodis reprehendi potest, tamen accipio, quod dant. Si longus, levis dictata sunt. Aut unde est hoc contritum vetustate proverbium: quicum in tenebris? Quos quidem tibi studiose et diligenter tractandos magnopere censeo.
 			<br/><br/>
-			<button type="button" class="btn btn-default"><span class="glyphicon glyphicon-triangle-top"></span></button>
-  			<button type="button" class="btn btn-default"><span class="glyphicon glyphicon-triangle-bottom"></span></button>
-			<button type="button" class="btn btn-default"><span class="glyphicon glyphicon-comment"></span>  Add Comment</button>
+			<button type="button" class="btn btn-default"><span class="glyphicon glyphicon-thumbs-up"></span> 11 </button>
+			<button type="button" class="btn btn-default"><span class="glyphicon glyphicon-comment"></span>  View Comments</button>
 			<button type="button" class="btn btn-default pull-right"><span class="glyphicon glyphicon-star"></span></button>
 
   			</div>
@@ -211,9 +216,8 @@
 
 			Cur, nisi quod turpis oratio est? Hoc etsi multimodis reprehendi potest, tamen accipio, quod dant. Si longus, levis dictata sunt. Aut unde est hoc contritum vetustate proverbium: quicum in tenebris? Quos quidem tibi studiose et diligenter tractandos magnopere censeo.
 			<br/><br/>
-			<button type="button" class="btn btn-default"><span class="glyphicon glyphicon-triangle-top"></span></button>
-  			<button type="button" class="btn btn-default"><span class="glyphicon glyphicon-triangle-bottom"></span></button>
-			<button type="button" class="btn btn-default"><span class="glyphicon glyphicon-comment"></span>  Add Comment</button>
+			<button type="button" class="btn btn-default"><span class="glyphicon glyphicon-thumbs-up"></span> 23 </button>
+			<button type="button" class="btn btn-default"><span class="glyphicon glyphicon-comment"></span>  View Comments</button>
 			<button type="button" class="btn btn-default pull-right"><span class="glyphicon glyphicon-star"></span></button>  		
 
 			</div>
@@ -234,9 +238,8 @@
 
 			Cur, nisi quod turpis oratio est? Hoc etsi multimodis reprehendi potest, tamen accipio, quod dant. Si longus, levis dictata sunt. Aut unde est hoc contritum vetustate proverbium: quicum in tenebris? Quos quidem tibi studiose et diligenter tractandos magnopere censeo.
 			<br/><br/>
-			<button type="button" class="btn btn-default"><span class="glyphicon glyphicon-triangle-top"></span></button>
-  			<button type="button" class="btn btn-default"><span class="glyphicon glyphicon-triangle-bottom"></span></button>
-			<button type="button" class="btn btn-default"><span class="glyphicon glyphicon-comment"></span>  Add Comment</button>
+			<button type="button" class="btn btn-default"><span class="glyphicon glyphicon-thumbs-up"></span> 12 </button>
+			<button type="button" class="btn btn-default"><span class="glyphicon glyphicon-comment"></span>  View Comments</button>
 			<button type="button" class="btn btn-default pull-right"><span class="glyphicon glyphicon-star"></span></button>
   			
   			</div>
