Add logout mockup and mockup post on Food Finder

--- a/static/profile.html
+++ b/static/profile.html
@@ -140,6 +140,7 @@
 				<ul class="nav navbar-nav navbar-right">
 					<li> <a href="messages.html"><span class="glyphicon glyphicon-envelope"></span> Messages </a></li>
 					<li class="active"> <a href="profile.html" ><span class="glyphicon glyphicon-user"></span> Profile </a></li>
+					<li> <a href="" > Log Out </a></li>
 				</ul>
 			</div>
 		</div>
