--- a/static/foodfinder.html
+++ b/static/foodfinder.html
@@ -155,6 +155,7 @@
 				<ul class="nav navbar-nav navbar-right">
 					<li> <a href="messages.html"><span class="glyphicon glyphicon-envelope"></span> Messages </a></li>
 					<li> <a href="profile.html" ><span class="glyphicon glyphicon-user"></span> Profile </a></li>
+					<li> <a href="" > Log Out </a></li>
 				</ul>
 			</div>
 		</div>
@@ -191,7 +192,7 @@
   			</div>
 
   			<div class="panel-body">
- 				<h3 >1.1 mile away: Goody's Market<br/><br/></h3>
+ 				<h3 >1.1 miles away: Goody's Market<br/><br/></h3>
 
     		Gluten Free Items: Applegate, Earthbound Farm, Etc
     		<br/>
@@ -201,6 +202,19 @@
     		
     		<br/><br/>
 			<button type="button" class="btn btn-default"><span class="glyphicon glyphicon-thumbs-up"></span> 36 </button>
+  			</div>
+
+  			<div class="panel-body">
+ 				<h3 >1.3 miles away: Roots<br/><br/></h3>
+
+    		Gluten Free Menu: Pacific Crest, Chop-Chop River
+    		<br/>
+    		Vegan Menu: Hetch Hetchy, The Root Berger, Tuolomme Meadows
+    		<br/>
+    		Vegatarian Menu: Sweet Potato Fries, Fern Creek Smoothies
+    		
+    		<br/><br/>
+			<button type="button" class="btn btn-default"><span class="glyphicon glyphicon-thumbs-up"></span> 45 </button>
   			</div>
 
 
