--- a/static/index.html
+++ b/static/index.html
@@ -130,8 +130,9 @@
       			</form>
 
 				<ul class="nav navbar-nav navbar-right">
-					<li> <a href="messages.html"><span class="glyphicon glyphicon-envelope"></span> Messages </a></li>				
+					<li> <a href="messages.html"><span class="glyphicon glyphicon-envelope"></span> Messages </a></li>			
 					<li> <a href="profile.html" ><span class="glyphicon glyphicon-user"></span> Profile </a></li>
+					<li> <a href="" > Log Out </a></li>
 				</ul>
 			</div>
 		</div>
