--- a/static/messages.html
+++ b/static/messages.html
@@ -143,6 +143,7 @@
 				<ul class="nav navbar-nav navbar-right">
 					<li class="active"> <a href="messages.html"><span class="glyphicon glyphicon-envelope"></span> Messages </a></li>
 					<li> <a href="profile.html"><span class="glyphicon glyphicon-user"></span> Profile </a></li>
+					<li> <a href="" > Log Out </a></li>
 				</ul>
 			</div>
 		</div>
